--- a/server/package.json
+++ b/server/package.json
@@ -18,6 +18,7 @@
     "dotenv": "^16.4.7",
     "elasticemail": "^0.2.0",
     "express": "^4.21.2",
+    "express-validator": "^7.2.1",
     "mongoose": "^8.12.1",
     "multer": "^1.4.5-lts.1",
     "multer-storage-cloudinary": "^4.0.0",
